force-app/main/default/objects/COA_Transaction_Entry__c/COA_Transaction_Entry__c.object-meta.xml
<CustomObject>
    <label>COA Transaction Entry</label>
    <nameField>
        <displayFormat>COATE-{0000000000}</displayFormat>
        <label>COA Transaction Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COA Transaction Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>