force-app/main/default/objects/COA_Transaction_Entry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>COA Transaction Entries</relationshipLabel>
    <relationshipName>COA_Transaction_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>