force-app/main/default/objects/COA_Transaction_Entry__c/fields/Chart_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Chart of Account</label>
    <referenceTo>Chart_of_Account__c</referenceTo>
    <relationshipLabel>COA Transaction Entries</relationshipLabel>
    <relationshipName>COA_Transaction_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>