force-app/main/default/objects/COA_Transaction_Entry__c/fields/COA_Transaction__c.field-meta.xml
<CustomField>
    <fullName>COA_Transaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>COA Transaction</label>
    <referenceTo>COA_Transaction__c</referenceTo>
    <relationshipLabel>COA Transaction Entries</relationshipLabel>
    <relationshipName>COA_Transaction_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>