force-app/main/default/objects/COA_Transaction_Entry__c/fields/Credit_Chart_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Credit_Chart_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Chart of Account</label>
    <referenceTo>Chart_of_Account__c</referenceTo>
    <relationshipLabel>COA Transaction Entries (Credit Chart of Account)</relationshipLabel>
    <relationshipName>COA_Transaction_Entries2</relationshipName>
    <type>Lookup</type>
</CustomField>