force-app/main/default/objects/COA_Transaction_Entry__c/fields/DC__c.field-meta.xml
<CustomField>
    <fullName>DC__c</fullName>
    <label>DC</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>