force-app/main/default/objects/COA_Transaction_Entry__c/fields/Debit_Chart_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Debit_Chart_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debit Chart of Account</label>
    <referenceTo>Chart_of_Account__c</referenceTo>
    <relationshipLabel>COA Transaction Entries (Debit Chart of Account)</relationshipLabel>
    <relationshipName>COA_Transaction_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>