force-app/main/default/objects/COA_Transaction_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>COA_Transaction__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Chart_of_Account__c</columns>
    <columns>DC__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>